# haskell-api

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.ui  README.md  docker-compose.yml  haskell-api.cabal  migrations.sql  package.yaml  railway.toml  server.js  stack.yaml  start.sh
app/: Main.hs
migrations/: V0__create_migrations_table.sql  V1__create_users_table.sql  V2__create_employees_table.sql
scripts/: run-migrations.sh
src/: Api.hs  Config.hs  Main.hs  Models.hs
ui/: .dockerignore  Dockerfile  Dockerfile.railway  nginx.conf  package-lock.json  package.json  railway.toml  server.js  vite.config.ts
ui/src/: App.tsx
ui/src/api/: client.ts
ui/src/components/: Layout.tsx
ui/src/pages/: Employees.tsx  Goals.tsx  Users.tsx
ui/src/types/: api.ts
