cabal-version:       2.2

name:                haskell-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-api#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable haskell-api
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Config
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                      postgresql-simple,
                      resource-pool,
                      scotty,
                      swagger2,
                      aeson,
                      text,
                      wai-middleware-static,
                      http-types,
                      lens,
                      lens-aeson,
                      bytestring,
                      unordered-containers,
                      insert-ordered-containers,
                      time >= 1.12,
                      uuid-types >= 1.0.6,
                      random >= 1.2
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
