cabal-version: 1.12

name:           haskell-api
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/JoroVSG/haskell-api#readme>
homepage:       https://github.com/JoroVSG/haskell-api#readme
bug-reports:    https://github.com/JoroVSG/haskell-api/issues
author:         JoroVSG
maintainer:     example@example.com
copyright:      2024 JoroVSG
license:        BSD3
build-type:     Simple

executable haskell-api
  main-is: Main.hs
  other-modules:
      Config
      Models
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.7 && <5
    , http-types
    , mtl
    , postgresql-simple
    , resource-pool
    , scotty
    , text
    , transformers
    , wai
    , wai-cors
    , wai-extra
  default-language: Haskell2010
