cabal-version: 1.12

name:           haskell-api
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/JoroVSG/haskell-api#readme>
homepage:       https://github.com/JoroVSG/haskell-api#readme
bug-reports:    https://github.com/JoroVSG/haskell-api/issues
author:         JoroVSG
maintainer:     example@example.com
copyright:      2024 JoroVSG
license:        BSD3
build-type:     Simple

executable haskell-api
  main-is: Main.hs
  other-modules:
      Api
      Config
      Models
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , scotty
    , aeson
    , text
    , postgresql-simple
    , resource-pool
    , http-types
    , wai
    , wai-cors
    , wai-extra
    , transformers
    , mtl
    , time
    , scientific
  default-language: Haskell2010
